--- a/.github/workflows/Deploy-AMBA.yml
+++ b/.github/workflows/Deploy-AMBA.yml
@@ -9,7 +9,7 @@ permissions:
 
 env:
   Location: "norwayeast"
-  ManagementGroupPrefix: "alz"
+  ManagementGroupPrefix: "CAF"
 
 jobs:
   deploy_job:
